completed form, preparing to write logic

--- a/team-builder/src/index.scss
+++ b/team-builder/src/index.scss
@@ -1,13 +1,113 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+  font-size: 62.5%;
+  font-family: sans-serif;
+	font: inherit;
+	vertical-align: baseline;
 }
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+// body {
+//   margin: 0;
+//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+//     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+//     sans-serif;
+//   -webkit-font-smoothing: antialiased;
+//   -moz-osx-font-smoothing: grayscale;
+// }
+h1{
+  margin-top: 10%;
+  margin-bottom: 2%;
+  font-size: 2rem;
+  font-family: sans-serif;
+  font-weight: 300;
+}
+.inputs{
+  border: 1px solid black;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 40%;
+  height: 300px;
+  margin: 0 auto;
+  padding: 1%;
+
+  .half{
+    border-radius: 10px;
+    padding: 1%;
+    margin: 1%;
+    margin-top: 3%;
+    width: 34%;
+    height: 25px;
+    display: flex;
+    flex-wrap: wrap;
+    font-size: 1.2rem;
+  }
+
+  .whole{
+    border-radius: 10px;
+    width: 73%;
+    padding: 1%;
+    margin: 1%;
+    height: 25px;
+    font-size: 1.2rem;
+  }
+
+ .class{
+   width: 100%;
+
+   .join-btn{
+     margin-top:  3%;
+     padding: 2%;
+     width: 35%;
+     border-radius: 5px;
+     font-size: 1rem;
+     font-weight: 500;
+     font-family: sans-serif;
+   }
+ }
+
+}// .inputs
+
