--- a/team-builder/src/index.scss
+++ b/team-builder/src/index.scss
@@ -47,14 +47,9 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-// body {
-//   margin: 0;
-//   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-//     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-//     sans-serif;
-//   -webkit-font-smoothing: antialiased;
-//   -moz-osx-font-smoothing: grayscale;
-// }
+
+// MY CSS //
+
 h1{
   margin-top: 10%;
   margin-bottom: 2%;
@@ -83,7 +78,7 @@ h1{
     height: 25px;
     display: flex;
     flex-wrap: wrap;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .whole{
@@ -92,7 +87,7 @@ h1{
     padding: 1%;
     margin: 1%;
     height: 25px;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
  .class{
@@ -106,8 +101,12 @@ h1{
      font-size: 1rem;
      font-weight: 500;
      font-family: sans-serif;
+     background-color: skyblue;
+     color: white;
    }
- }
+ } // .class
 
 }// .inputs
+
+
 
