--- a/team-builder/src/index.scss
+++ b/team-builder/src/index.scss
@@ -30,7 +30,9 @@ footer, header, hgroup, menu, nav, section {
 	display: block;
 }
 body {
-	line-height: 1;
+  line-height: 1.5;
+  letter-spacing: 1.5;
+  background-color: skyblue;
 }
 ol, ul {
 	list-style: none;
@@ -48,7 +50,7 @@ table {
 	border-spacing: 0;
 }
 
-// MY CSS //
+// FORM.js //
 
 h1{
   margin-top: 10%;
@@ -56,57 +58,105 @@ h1{
   font-size: 2rem;
   font-family: sans-serif;
   font-weight: 300;
+  color: white;
 }
-.inputs{
-  border: 1px solid black;
-  border-radius: 10px;
+form{
+  background-color: white;
+  border-radius: 5px;
+  width: 50%;
+  margin: 0 auto;
+
+  .inputs{
+    border: 3px solid white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 70%;
+    height: 300px;
+    margin: 0 auto;
+    padding: 1%;
+  
+    .half{
+      border-radius: 10px;
+      padding: 1%;
+      margin: 1%;
+      margin-top: 3%;
+      width: 34%;
+      height: 25px;
+      display: flex;
+      flex-wrap: wrap;
+      font-size: 1rem;
+    }
+  
+    .whole{
+      border-radius: 10px;
+      width: 73%;
+      padding: 1%;
+      margin: 1%;
+      height: 25px;
+      font-size: 1rem;
+    }
+  
+   .class{
+     width: 100%;
+  
+     .join-btn{
+       margin-top:  3%;
+       padding: 2%;
+       width: 35%;
+       border-radius: 5px;
+       font-size: 1rem;
+       font-weight: 500;
+       font-family: sans-serif;
+       background-color: skyblue;
+       color: white;
+     }
+  
+  
+     .join-btn:hover{
+      background-color: lightblue;
+      color: white;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      cursor: pointer;
+      transition: all 0.2s ease 0s;
+     }
+  
+    } // .class
+  
+  }// .inputs
+ 
+} // form
+
+// MEMBER.js //
+
+.containerTwo{
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  width: 40%;
-  height: 300px;
-  margin: 0 auto;
-  padding: 1%;
 
-  .half{
-    border-radius: 10px;
-    padding: 1%;
-    margin: 1%;
-    margin-top: 3%;
-    width: 34%;
-    height: 25px;
-    display: flex;
-    flex-wrap: wrap;
-    font-size: 1rem;
+  .card{
+    margin-top: 5%;
+    // border: 1px solid red;
+    margin-left: 2%;
+    margin-bottom: 2%;
+    width: 35%;
+    height: 175px;
+    border-radius: 5px;
+    background-color: white;
+    font-family: sans-serif;
+
+    p{
+      color: purple;
+    }
+
+    .memberh1{
+      color: skyblue;
+      font-size: 1.5rem;
+    }
   }
-
-  .whole{
-    border-radius: 10px;
-    width: 73%;
-    padding: 1%;
-    margin: 1%;
-    height: 25px;
-    font-size: 1rem;
-  }
-
- .class{
-   width: 100%;
-
-   .join-btn{
-     margin-top:  3%;
-     padding: 2%;
-     width: 35%;
-     border-radius: 5px;
-     font-size: 1rem;
-     font-weight: 500;
-     font-family: sans-serif;
-     background-color: skyblue;
-     color: white;
-   }
- } // .class
-
-}// .inputs
+}
 
 
 
